build android on winodws

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -578,6 +578,9 @@ if (WIN32)
     set(COMBINE_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/build/windows/combine-static-libs.bat")
     set(CMAKE_AR "lib.exe")
 endif()
+if (ANDROID_ON_WINDOWS)
+    set(COMBINE_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/build/windows/combine-static-libs.bat")
+endif()
 
 # Add a custom command to TARGET that combines the static libraries in DEPS into a single archive.
 function(combine_static_libs TARGET OUTPUT DEPS)
